Excluded modules, updated dependencies, added webpack config

--- a/wildlife-form/src/index.html
+++ b/wildlife-form/src/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
   <head>
     <title>Express</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="stylesheet" href="/src/css/style.css">
   </head>
 
   <body>
