--- a/wildlife-form/src/index.html
+++ b/wildlife-form/src/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Express</title>
-    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="/src/css/style.css">
   </head>
@@ -10,7 +9,7 @@
     <div class="container">
       <main>
         <div class="py-5 text-center">
-          <img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+          <img class="d-block mx-auto mb-4" src="" alt="" width="72" height="57">
           <h2>Checkout form</h2>
           <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
         </div>
@@ -229,6 +228,6 @@
         </ul>
       </footer>
     </div>
-    <script src="bundle.js" defer async></script>
+    <script src="/dist/bundle.js" defer async></script>
   </body>
 </html>
