--- a/wildlife-form/src/index.html
+++ b/wildlife-form/src/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <title>Express</title>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="/src/css/style.css">
   </head>
