Added Jekyll/Ruby support

--- a/wildlife-form/index.html
+++ b/wildlife-form/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Express</title>
+    <title>Form Test</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="/src/css/style.css">
@@ -229,6 +229,8 @@
         </ul>
       </footer>
     </div>
-    <script src="/dist/bundle.js" defer async></script>
+<!--    <iframe id="iform" src="https://docs.google.com/forms/d/e/1FAIpQLSc1HS1p1aGzZVWm53Mp0hGclQ4hvlUu0R8WxgIRS1k9zvr1Wg/viewform?embedded=true" width="50%" height=50%"></iframe>-->
+   <script src="/dist/bundle.js" defer async></script>
+    <div id="out"></div>
   </body>
 </html>
