added zoho env support

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         </ul>
       </footer>
     </div>
+    <script src="/dist/zoho.js" type="module"></script>
     <script src="/dist/bundle.js" defer async></script>
     <div id="out"></div>
   </body>
