--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
         </ul>
       </footer>
     </div>
-    <script src="/dist/zoho.js" type="module"></script>
-    <script src="/dist/bundle.js" defer async></script>
+    <script src="dist/zoho.js" type="module"></script>
+    <script src="dist/bundle.js" defer async></script>
     <div id="out"></div>
   </body>
 </html>
