minor text edits

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<select class="form-select" id="state" name="state" required>
 									<option selected disabled value="">Choose...</option>
 								</select>
-								<div class="invalid-feedback">Please provide a valid state.</div>
+								<div class="invalid-feedback">Please select a state.</div>
 							</div>
 
 							<div class="col-sm-6">
@@ -107,7 +107,7 @@
 								<select class="form-select" id="jurisdiction" name="jurisdiction" required>
 									<option value="">Select a state first</option>
 								</select>
-								<div class="invalid-feedback">Please provide a valid jurisdition.</div>
+								<div class="invalid-feedback">Please select a jurisdition.</div>
 							</div>
 
 							<p class="mt-4 fst-italic">
