form question updates

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 					<form class="needs-validation animal-intake" novalidate>
 						<div class="row g-3">
 							<div class="col-sm-6">
-								<label for="date" class="form-label">Date Found</label>
-								<input type="date" class="form-control" id="date" name="date" placeholder="07/15/2023" required />
+								<label for="date-found" class="form-label">Date Found</label>
+								<input type="date" class="form-control" id="date-found" name="date-found" placeholder="07/15/2023" required />
 								<div class="invalid-feedback">Please select a date.</div>
 							</div>
 
 							<div class="col-sm-6">
-								<label for="time" class="form-label">Time Found</label>
-								<input type="time" class="form-control" id="time" name="time" placeholder="1:00 pm" required />
+								<label for="time-found" class="form-label">Time Found</label>
+								<input type="time" class="form-control" id="time-found" name="time-found" placeholder="1:00 pm" required />
 								<div class="invalid-feedback">Please select a time.</div>
 							</div>
 
