Created config, improved webpack, code
Added config file and system that reads it. Currently uses built-in json error checking.
I plan to create better support for it when making the "wizard". Separated bootstrap from the bundle and now the visuals load faster

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 			</ul>
 		</footer>
 	</body>
-	<script src="./dist/bundle.js" defer async></script>
+	<script src="./dist/style.js" defer async></script>
+	<script src="./dist/app.js" defer async></script>
 	<div id="out"></div>
 </html>
