--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Form Test</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<link rel="stylesheet" href="/src/css/style.css" />
+		<link rel="stylesheet" href="./src/css/style.css" />
 	</head>
 
 	<body>
