Improvements to config file, readability and added url config

--- a/submitted.html
+++ b/submitted.html
@@ -28,5 +28,5 @@
             </ul>
         </footer>
 </body>
-<script src="./dist/style.js" defer async></script>
+<script src="./dist/style.js"></script>
 </html>
