--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html lang="en">
-	<head>
-		<title>Form Test</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<link rel="stylesheet" href="./src/css/style.css" />
-		<link
-			href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
-			rel="stylesheet"
-			integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
-			crossorigin="anonymous"
-		/>
-	</head>
+<head>
+	<title>Form Test</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<link rel="stylesheet" href="./src/css/style.css" />
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+		  rel="stylesheet"
+		  integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
+		  crossorigin="anonymous" />
+	<link rel="stylesheet" href="Control.FullScreen.css" />
+	<script src="Control.FullScreen.js"></script>
+</head>
 
 	<body>
 		<div class="container">
