--- a/index.html
+++ b/index.html
@@ -157,13 +157,8 @@
 			</ul>
 		</footer>
 	</body>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-		integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-		crossorigin="anonymous"
-	></script>
-
-	<script src="./dist/style.js" defer async></script>
-	<script src="./dist/app.js" defer async></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="style.js" defer async></script>
+	<script src="app.js" defer async></script>
 	<div id="out"></div>
 </html>
