--- a/index.html
+++ b/index.html
@@ -68,32 +68,13 @@
 								</div>
 							</div>
 
-							<div class="col-md-5">
-								<label for="circumstance" class="form-label">Circumstances of Rescue</label>
-								<select class="form-select" id="circumstance" name="circumstance" required>
+							<div class="col-md-8">
+								<label for="firstDropDownTree" class="form-label">Circumstances of Rescue</label>
+								<!-- <select class="form-select" id="circumstance" name="circumstance" required>
 									<option selected disabled value="">Choose...</option>
 									<option>Animal Interaction</option>
-									<option>Behavioral Stranding</option>
-									<option>Born/Hatched in Captivity</option>
-									<option>Botanicals</option>
-									<option>Collision</option>
-									<option>Confiscation</option>
-									<option>Dead on Arrival</option>
-									<option>Electrocution/Electric Shock</option>
-									<option>Entrapment</option>
-									<option>Environment</option>
-									<option>Failure to Thrive/Maladaption</option>
-									<option>Foreign Body/Object</option>
-									<option>Inappropriate Human Possession</option>
-									<option>Nest/Habitat Disturbance/Destruction</option>
-									<option>Orphan, true</option>
-									<option>Petrochemicals</option>
-									<option>Projectile</option>
-									<option>Referral</option>
-									<option>Undetermined</option>
-									<option>None of the Above</option>
-								</select>
-								<div class="dropdown dropdown-tree mt-5" id="firstDropDownTree"></div>
+								</select> -->
+								<div class="dropdown dropdown-tree form-select" id="firstDropDownTree" name="circumstance"></div>
 								<div class="invalid-feedback">Please select a valid circumstance.</div>
 							</div>
 
@@ -157,8 +138,8 @@
 			</ul>
 		</footer>
 	</body>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<script src="style.js" defer async></script>
-	<script src="app.js" defer async></script>
+
+	<script src="./dist/style.js" defer async></script>
+	<script src="./dist/app.js" defer async></script>
 	<div id="out"></div>
 </html>
